--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 	<body>
 		<div class="card">
 			<div class="wrapper">
-				<img src="./images/image-product-desktop.jpg" alt="" class="desktop-img" />
-				<img src="./images/image-product-mobile.jpg" alt="" class="mobile-img" />
+				<img src="image-product-desktop.jpg" alt="" class="desktop-img" />
+				<img src="image-product-mobile.jpg" alt="" class="mobile-img" />
 			</div>
 			<div class="card-body">
 				<h2 class="perfume">Perfume</h2>
